--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ after_success:
   - docker build -t fimperioli/multi-docker-worker ./worker
   - docker build -t fimperioli/multi-docker-nginx ./nginx
   #login to docker cli using env variables and only a single command
-  - echo "5M92tGRHrjq&" | docker login -u "fimperioli" --password-stdin
+  - echo "xxxx" | docker login -u "xxx" --password-stdin
   #push to docker hub using docker cli login
   - docker push fimperioli/multi-docker-client
   - docker push fimperioli/multi-docker-server
